--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <style>
+    body {
+        width: 200px;
+
+    }
     .big {
         color: blue;
     }
@@ -15,11 +19,9 @@
     }
     p {
         background-color: yellow;
-        width: 200px;
+    
     }
-    .container {
-        width: 200px;
-    }
+     
     .b329 {
         font-weight: bold;
     }
